--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
           <li class="list-group-item">ID:123</li>
           <li class="list-group-item">email: ahmed.ali@email.com</li>
           <li class="list-group-item">office number: 0745928473</li>
-          <li class="list-group-item">school name: 0745928473</li>
+          <li class="list-group-item">school: 0745928473</li>
         </ul>
       </div>
     </div>
