--- a/public/teams.html
+++ b/public/teams.html
@@ -22,13 +22,15 @@
  
 <div class="card" style="width: 18rem">
 <div class="card-body">
-  <h3 class="card-title">abdinasir</h3>
-  <h5 class="card-title">abdinasir123</h5>
+  <h3 class="card-title">ali osman</h3>
+  <h5 class="card-title">123</h5>
 
   <ul class="list-group list-group-flush">
     <li class="list-group-item">ID:123</li>
-    <li class="list-group-item">abdinasir@email.com</li>
-    <li class="list-group-item">office number:012122203034</li>
+    <li>
+    <a href="mailto:aliosman@gmail.com">aliosman@gmail.com</a>
+  </li>
+    <li class="list-group-item">office number:22</li>
   </ul>
 </div>
 </div>
@@ -44,8 +46,11 @@
     <h5 class="card-title">engineer</h5>
 
     <ul class="list-group list-group-flush">
-      <li class="list-group-item">bob123</li>
-      <li class="list-group-item">email:bobsmith@email.com</li>
+      <li class="list-group-item">2</li>
+      <li>
+      <a href="mailto:miaas@gmail.com">miaas@gmail.com</a>
+    </li>
+     
     </ul>
   </div>
 </div>
