--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,9 @@
 
         <ul class="list-group list-group-flush">
           <li class="list-group-item">ID:123</li>
-          <li class="list-group-item">email: ahmed.ali@email.com</li>
+          <li>
+            <a href="mailto: ahmed.ali@gmail.com">email: ahmed.ali@email.com</a>
+          </li>
           <li class="list-group-item">office number: 0745928473</li>
         </ul>
       </div>
